# ebash

./: CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
.cargo/: config.toml
src/: prompt.md
tests/: integration_test.rs
tests/fixtures/default/: third.sh
