[package]
name = "ebash"
version = "0.1.0"
edition = "2021"
description = "AI-powered shell"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
prost = "0.14.3"
# rustls so we can cross-compile mac -> linux without dealing with openssl
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.4"
tempfile = "3.27.0"
serde_json = "1.0.149"
format-bytes = "0.3.0"
shell-quote = "0.7.2"
log = "0.4.29"
env_logger = "0.11.9"
rusqlite = { version = "0.39.0", features = ["bundled"] }
toml = "1.0.6"
uuid = { version = "1.22.0", features = ["v4"] }
which = "8.0.2"

[build-dependencies]
anyhow = "1.0.102"
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"

[dev-dependencies]
rstest = "0.26.1"
rstest_reuse = "0.7.0"
portable-pty = "0.9.0"

[[bin]]
name = "ebash"
path = "generated/main.rs"
